# Hyprlux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  module.nix  shell.nix
.github/workflows/: mirror.yml  nix.yml  publish.yml  rustfmt.yml  test.yml
aur/: PKGBUILD  config.toml  hyprlux.service  install.sh
examples/: hyprlux.toml  location_based.toml  manual.toml
nix/: default.nix  hm-module.nix  module.nix  shell.nix
src/: config.rs  main.rs  utils.rs
src/shaders/: mod.rs  night_light.rs  shader.rs  vibrance.rs
