[package]
name = "hyprlux"
version = "0.1.4"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colog = "1.3.0"
hyprland = "0.4.0-beta.1"
log = "0.4.22"
notify = "6.1.1"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
strfmt = "0.2.4"
sunrise = "1.0.1"
toml = "0.8.19"
xdg = "2.5.2"
