[package]
name = "hyprlux"
version = "0.1.5"
edition = "2021"
authors = ["Amadej Kastelic <amadejkastelic7@gmail.com>"]
description = "Hyprland utility that automates vibrance and night light control"
repository = "https://github.com/amadejkastelic/Hyprlux"
readme = "README.md"
license = "MIT"
keywords = ["hyprland", "vibrance", "night", "light", "flux"]

[dependencies]
chrono = "0.4.39"
colog = "1.3.0"
hyprland = "0.4.0-beta.2"
log = "0.4.22"
notify = "6.1.1"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
strfmt = "0.2.4"
sunrise = "1.0.1"
toml = "0.8.19"
xdg = "2.5.2"
